--- a/2024Spring/material/session03.qmd
+++ b/2024Spring/material/session03.qmd
@@ -30,7 +30,7 @@ Either click on the slide area below or click
 
 ## 🎥 Lecture videos 
 
-All the videos are available via this [playlist.](https://www.youtube.com/playlist?list=PLZDawQMrG1RJ1oZwuZtiG0fOWSOgyZhYC).
+All the videos are available via this [playlist](https://www.youtube.com/playlist?list=PLZDawQMrG1RJ1oZwuZtiG0fOWSOgyZhYC).
 
 ::: {.callout-note collapse="true"}
 ## Expand to access the videos directly
@@ -75,6 +75,14 @@ Read the following tutorials:
 
 - [Fundamental object types in R I: Functions](/2024Spring/tutorials/obj-types-i-functions/index.qmd)
 - [Fundamental object types in R II: Vectors](/2024Spring/tutorials/obj-types-ii-vectors/index.qmd)
+
+### 🏆 Further readings
+
+*I suggest you read these references after you learned about data frames in*
+*session 4 and data wrangling techniques in sessions 8 and 9.*
+- Sections 1-3 in [Chapter 12](https://r4ds.hadley.nz/logicals) of @r4ds.
+- [Chapter 13](https://r4ds.hadley.nz/numbers) in @r4ds.
+- [Chapter 14](https://r4ds.hadley.nz/strings) in @r4ds.
 
 ## ✍️ Coursework
 
