--- a/references/references.bib
+++ b/references/references.bib
@@ -10,6 +10,21 @@
   lccn = {QA276.45.R3 W5 2019}
 }
 
+@article{hadleygraphics,
+  title = {A {{Layered Grammar}} of {{Graphics}}},
+  author = {Wickham, Hadley},
+  year = {2010},
+  month = jan,
+  journal = {Journal of Computational and Graphical Statistics},
+  volume = {19},
+  number = {1},
+  pages = {3--28},
+  issn = {1061-8600, 1537-2715},
+  doi = {10.1198/jcgs.2009.07098},
+  urldate = {2024-03-11},
+  langid = {english}
+}
+
 @book{jamesIntroductionStatisticalLearning2021,
   title = {An Introduction to Statistical Learning: With Applications in {{R}}},
   shorttitle = {An Introduction to Statistical Learning},
@@ -62,7 +77,7 @@
   year = {2023},
   edition = {2nd edition},
   publisher = {O'Reilly},
-  address = {Beijing Boston Farnham Sebastopol Tokyo},
+  address = {Beijing et al.},
   url = {https://r4ds.hadley.nz/},
   abstract = {Use R to turn data into insight, knowledge, and understanding. With this practical book, aspiring data scientists will learn how to do data science with R and RStudio, along with the tidyverse---a collection of R packages designed to work together to make data science fast, fluent, and fun. Even if you have no programming experience, this updated edition will have you doing data science quickly. You'll learn how to import, transform, and visualize your data and communicate the results. And you'll get a complete, big-picture understanding of the data science cycle and the basic tools you need to manage the details. Updated for the latest tidyverse features and best practices, new chapters show you how to get data from spreadsheets, databases, and websites. Exercises help you practice what you've learned along the way},
   isbn = {978-1-4920-9740-2},
