--- a/2024Spring/material/session07.qmd
+++ b/2024Spring/material/session07.qmd
@@ -57,4 +57,19 @@ More precisely, I can recommend the following:
 
 ## ✍️ Coursework
 
-TBD
+- Do the exercises `ProjectOrga` from the `DataScienceExercises` package
+
+::: {.callout-tip collapse="true"}
+## Quick code for starting the exercises
+```{r}
+#| eval: false
+learnr::run_tutorial(
+  name = "ProjectOrga", 
+  package = "DataScienceExercises", 
+  shiny_args=list("launch.browser"=TRUE))
+```
+:::
+- Download data about the CO2 emissions for some countries of your choice from
+the World Bank [website](https://data.worldbank.org/indicator/EN.ATM.CO2E.PC)
+for the years 2000 to 2020. Set up an R project, save the data, import it, and
+make a line graph.
