--- a/2024Spring/material/session04.qmd
+++ b/2024Spring/material/session04.qmd
@@ -52,4 +52,16 @@ Read the following tutorials:
 ## ✍️ Coursework
 
 - Do the `ObjectTypes2` exercises of the package `DataScienceExercises` 
+
+::: {.callout-tip collapse="true"}
+## Quick code for starting the exercises
+```{r}
+#| eval: false
+learnr::run_tutorial(
+  name = "ObjectTypes2", 
+  package = "DataScienceExercises", 
+  shiny_args=list("launch.browser"=TRUE))
+```
+:::
+
 - If you have questions or problems, please post them in the Moodle forum
