Add missing videos to session 2

--- a/2024Spring/material/session02.qmd
+++ b/2024Spring/material/session02.qmd
@@ -48,6 +48,32 @@ All the videos are available via this [playlist](https://www.youtube.com/playlis
 <div class="embed-container">
 <iframe width="370" height="208" src="https://www.youtube.com/embed/VutTy0OmX7Y?si=s9BWi73wHzry5yhw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 ```
+
+```{=html}
+<div class="embed-container">
+<iframe width="370" height="208" src="https://www.youtube.com/embed/IQKRZ6H108Q?si=FhS_mxVbESplwSQc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+```
+
+```{=html}
+<div class="embed-container">
+<iframe width="370" height="208" src="https://www.youtube.com/embed/YY6wpNp0opc?si=Mf9O9pbc1CVfAMKY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+```
+
+```{=html}
+<div class="embed-container">
+<iframe width="370" height="208" src="https://www.youtube.com/embed/-rQcU89O1Zg?si=jFGVqFwZVC_-Zhn-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+```
+
+```{=html}
+<div class="embed-container">
+<iframe width="370" height="208" src="https://www.youtube.com/embed/loaKp-6d-o8?si=yrK7P-kfPq1ndzaN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+```
+
+```{=html}
+<div class="embed-container">
+<iframe width="370" height="208" src="https://www.youtube.com/embed/ltRuzwUZgPs?si=P2muI-ysVKDN4lif" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+```
+
 :::
 
 ## 📚 Mandatory Reading
