--- a/2024Spring/material/session05.qmd
+++ b/2024Spring/material/session05.qmd
@@ -15,7 +15,7 @@ Will be posted after the session.
 
 ## 🎥 Lecture videos 
 
-There will be no videos for recap sesssions.
+There will be no videos for recap sessions.
 
 ## 📚 Mandatory Reading
 
@@ -23,4 +23,11 @@ TBD
 
 ## ✍️ Coursework
 
-TBD
+*During the first 60 minutes of the session you will work on this sheet in groups*
+*of three people. Please use only one computer but develop the solutions together.*
+*In the remaining 30 minutes we will go through your solutions and discuss problems.*
+*I will post my own solutions online after the session, but urge to first try*
+*to come up with solutions on your own.*
+
+- [Exercise sheet for this session](session05-exercises.qmd)
+- Possible solutions to the exercises
