--- a/2024Spring/material/timetable.qmd
+++ b/2024Spring/material/timetable.qmd
@@ -11,9 +11,9 @@ execute:
 
 
 ::: {.callout-important collapse=false}
-## 📢 Important change! (28.2.2024)
+## 📢 Important change! (17.04.2024)
 
-- 🗓️ Sessions 3 and 4 will be video lectures!
+- 🗓️ The mid term exam was removed and an additional recap session added!
 
 :::
 
@@ -48,21 +48,21 @@ execute:
 +--------+--------------+---------+--------------------------------------------------------+
 | 13     | 23.05.24     | Thu     | Introduction to data analytics                         |
 +--------+--------------+---------+--------------------------------------------------------+
-| **NN** | **30.05.24** | **Thu** | **Mid-term exam (60 minutes)**                         |
+| 14     | 30.05.24     | Thu.    | Sampling theory                                        |
 +--------+--------------+---------+--------------------------------------------------------+
-| 14     | 31.05.24     | Fri     | Sampling theory                                        |
+| 15     | 31.05.24     | Fri     | Simple linear regression                               |
 +--------+--------------+---------+--------------------------------------------------------+
-| 15     | 06.06.24     | Thu     | Simple linear regression                               |
+| 16     | 06.06.24     | Thu     | Recap and practice                                     |
 +--------+--------------+---------+--------------------------------------------------------+
-| 16     | 07.06.24     | Fri     | Multiple linear regression I                           |
+| 17     | 07.06.24     | Fri     | Multiple linear regression I                           |
 +--------+--------------+---------+--------------------------------------------------------+
-| 17     | 13.06.24     | Thu     | Multiple linear regression II                          |
+| 18     | 13.06.24     | Thu     | Multiple linear regression II                          |
 +--------+--------------+---------+--------------------------------------------------------+
-| 18     | 14.06.24     | Fri     | Selected machine learning tools                        |
+| 19     | 14.06.24     | Fri     | Selected machine learning tools                        |
 +--------+--------------+---------+--------------------------------------------------------+
-| 19     | 20.06.24     | Thu     | Open topic                                             |
+| 20     | 20.06.24     | Thu     | Open topic                                             |
 +--------+--------------+---------+--------------------------------------------------------+
-| 20     | 21.06.24     | Fri     | Recap and practice                                     |
+| 21     | 21.06.24     | Fri     | Recap and practice                                     |
 +--------+--------------+---------+--------------------------------------------------------+
 | **NN** | **28.06.23** | **Mon** | **Final exam; 10:00 – 11:30, MAD 130**                 |
 +--------+--------------+---------+--------------------------------------------------------+
