--- a/2024Spring/material/session03.qmd
+++ b/2024Spring/material/session03.qmd
@@ -28,6 +28,11 @@ Either click on the slide area below or click
 </div>
 ```
 
+::: {.callout-tip collapse="true"}
+## Solutions to the intermediate exercises
+<script src="https://gist.github.com/graebnerc/de4c233f8901905a5d4c15a586547801.js"></script>
+:::
+
 ## 🎥 Lecture videos 
 
 All the videos are available via this [playlist](https://www.youtube.com/playlist?list=PLZDawQMrG1RJ1oZwuZtiG0fOWSOgyZhYC).
