--- a/2024Spring/material/session05-solutions.qmd
+++ b/2024Spring/material/session05-solutions.qmd
@@ -10,18 +10,65 @@ format:
         toc: false
 ---
 
-# Exercise 1: Basic object types
+# Exercise 1: Basic object types I
+
+1. Create a vector containing the numbers `2`, `5`, `2.4` and `11`.
+
+```{r}
+ex1_vec <- c(2, 5, 2.4, 11)
+```
+
+2. Replace the second element with `5.9`.
+
+```{r}
+ex1_vec[2] <- 5.9
+ex1_vec
+```
+
+3. Add the elements `3` and `1` to the beginning, and the elements 
+`"8.0"` and `"9.2"` to the end of the vector.
+
+```{r}
+va_1 <- c(3, 1)
+va_2 <- c("8.0", "9.2")
+ex1_vec_extended <- c(va_1, ex1_vec, va_2)
+ex1_vec_extended
+```
+
+4. Create a vector with the numbers from -8 to 9 (step size: 0.5)
+
+```{r}
+ex1_vec_4 <- seq(-8, 9, by = 0.5)
+ex1_vec_4
+```
+
+5. Compute the square root of each element of the first vector 
+using vectorisation.
+
+```{r}
+sqrt(ex1_vec_4)
+```
+
+6. Create a character vector containing then strings `"Number_1"` to 
+`"Number_5"`. Use suitable helper functions to create this vector quickly.
+
+```{r}
+ex1_char_vec <- paste0("Number_", seq(1, 5))
+ex1_char_vec
+```
+
+# Exercise 2: Basic object types II
 
 Consider the following vector:
 
 ```{r}
-ex_1_vec <- c(1.9, "2", FALSE)
+ex_2_vec <- c(1.9, "2", FALSE)
 ```
 
 1. What is the type of this vector? Why?
 
 ```{r}
-typeof(ex_1_vec)
+typeof(ex_2_vec)
 ```
 
 Atomic vectors only contain objects of the same type, and there is a 
@@ -34,14 +81,14 @@ hierarchy is as as follows:
 3. `integer`
 4. `logical`
 
-Therefore, the type of `ex_1_vec` is `character`. The underlying reason is that
+Therefore, the type of `ex_2_vec` is `character`. The underlying reason is that
 you can, for instance, always transform a `double` value into a `character` 
 but not vice versa.
 
 2. What happens if you coerce this vector into type integer? Why?
 
 ```{r}
-as.integer(ex_1_vec)
+as.integer(ex_2_vec)
 ```
 
 Because `integer` is lower in the hierarchy than `character`, the transformation
@@ -90,7 +137,7 @@ round(2.9)
 
 
 
-# Exercise 2: Define a function
+# Exercise 3: Define a function
 
 Create functions that take a vector as input and returns:
 
@@ -116,7 +163,8 @@ get_beginning <- function(x){
 
 3. Only even numbers.
     
-> Hint: Use the operation `x %% y` to get the remainder from diving `x` by `y`, the so called 'modulo y'. For even numbers, the modulo 2 is zero.
+> Hint: Use the operation `x %% y` to get the remainder from diving `x` by `y`, 
+the so called 'modulo y'. For even numbers, the modulo 2 is zero.
 
 ```{r}
 get_even <- function(x){
@@ -130,17 +178,17 @@ get_even <- function(x){
 Apply your function to the following example vector:
 
 ```{r}
-ex_2_vec <- c(1, -8, 99, 3, NA, 4, -0.5, 50)
+ex_3_vec <- c(1, -8, 99, 3, NA, 4, -0.5, 50)
 ```
 
 ```{r}
-get_last_val(ex_2_vec)
-get_beginning(ex_2_vec)
-get_even(ex_2_vec)
+get_last_val(ex_3_vec)
+get_beginning(ex_3_vec)
+get_even(ex_3_vec)
 ```
 
 
-# Exercise 3: Lists
+# Exercise 4: Lists
 
 1. Create a list that contains three elements called `'a'`, `'b'` and `'c'`.
 The first element should correspond to a double vector with the elements
@@ -150,7 +198,7 @@ The second element should correspond to a character vector with the elments
 The third element should contain three times the entry `FALSE`.
 
 ```{r}
-ex_3_list <- list(
+ex_4_list <- list(
   'a' = c(1.5, -2.9, 99),
   'b' = c('Hello', "'3'", 'EUF'),
   'c' = rep(FALSE, 3)
@@ -162,16 +210,16 @@ ex_3_list <- list(
 get information about the respective structure. How do the results differ?
 
 ```{r}
-ex_3_df <- as.data.frame(ex_3_list)
-ex_3_tb <- tibble::as_tibble(ex_3_list)
-str(ex_3_list)
-str(ex_3_df)
-str(ex_3_tb)
+ex_4_df <- as.data.frame(ex_4_list)
+ex_4_tb <- tibble::as_tibble(ex_4_list)
+str(ex_4_list)
+str(ex_4_df)
+str(ex_4_tb)
 ```
 
 `str()` only differs with regard to the first line describing the type.
 
-# Exercise 4: Data frames and the study semester distribution at EUF
+# Exercise 5: Data frames and the study semester distribution at EUF
 
 The package `DataScienceExercises` contains a data set called `EUFstudentsemesters`,
 which contains information about the distribution of study semesters of 
