Add empty solution template for exercises in recap session

--- a/2024Spring/material/session05.qmd
+++ b/2024Spring/material/session05.qmd
@@ -30,4 +30,5 @@ TBD
 *to come up with solutions on your own.*
 
 - [Exercise sheet for this session](session05-exercises.qmd)
+- [R file template for your solutions](https://gist.github.com/graebnerc/3725a703f7fcbc6d429993810d7a81fd)
 - Possible solutions to the exercises
