--- a/2024Spring/material/session05.qmd
+++ b/2024Spring/material/session05.qmd
@@ -31,4 +31,4 @@ TBD
 
 - [Exercise sheet for this session](session05-exercises.qmd)
 - [R file template for your solutions](https://gist.github.com/graebnerc/3725a703f7fcbc6d429993810d7a81fd)
-- Possible solutions to the exercises
+- [Possible solutions to the exercises](session05-solutions.qmd)
