--- a/2024Spring/material/index.qmd
+++ b/2024Spring/material/index.qmd
@@ -34,7 +34,7 @@ For information on how to use the exercise code, read
 |   Session    | Topic                                                   |                      Slides                       |       Exercise code        |
 |:-------------:|:--------------|:-------------:|:-------------:|
 |   [1](#s1)   | [General introduction](/2024Spring/material/session01.qmd) |       [Slides](/2024Spring/material/slides/T1-Introduction.pdf)        |                            |
-|   [2](#s2)   | [Basics of R and R-Studio]((/2024Spring/material/session02.qmd))                                |     [Slides](/2024Spring/material/slides/T2-Basics-Functions.pdf)      |          `Basics`          |
+|   [2](#s2)   | [Basics of R and R-Studio]((/2024Spring/material/session02.qmd))                                |     [Slides](/2024Spring/material/slides/T2-Basics-Functions.pdf)      |          `Basics`, `Functions`          |
 |   [3](#s3)   | [Basic objects](/2024Spring/material/session03.qmd)                                           |          [Slides](/2024Spring/material/slides/T3-Objects.pdf)          |       `ObjectTypes1`       |
 |   [4](#s4)   | [Advanced objects](/2024Spring/material/session04.qmd)                                        |        [Slides](/2024Spring/material/slides/T4-AdvObjects.pdf)         |       `ObjectTypes2`       |
 |      5       | [Recap & practice](/2024Spring/material/session05.qmd)                                        |                                                   |                            |
