--- a/2024Spring/material/session07.qmd
+++ b/2024Spring/material/session07.qmd
@@ -30,6 +30,7 @@ Either click on the slide area below or click
 </div>
 ```
 
+- [Data for the exercises](/2024Spring/material/fread_expls.zip)
 
 ## 🎥 Lecture videos 
 
@@ -49,11 +50,10 @@ instead.
 
 While we do not cover this in this course, I highly recommend learning the 
 version control system [Git](https://git-scm.com/). 
-More precisely, I can recommend the following:
+Personally, I can recommend the following:
 
-- Introduction to Git
-- Introduction to GitHub
-- Blog 
+- [Very concise introduction](https://rogerdudler.github.io/git-guide/) to Git
+- Introduction to GitHub: [GitHub skills](https://skills.github.com/) and the [official docs](https://docs.github.com/en)
 
 ## ✍️ Coursework
 
@@ -73,3 +73,4 @@ learnr::run_tutorial(
 the World Bank [website](https://data.worldbank.org/indicator/EN.ATM.CO2E.PC)
 for the years 2000 to 2020. Set up an R project, save the data, import it, and
 make a line graph.
+    - [ZIP file](/2024Spring/material/session07-solution.zip) with a possible solution^[You can ignore the `make_co2_data.R` for now and only look at `make_co2_plot.R`.]
