--- a/2024Spring/material/session07.qmd
+++ b/2024Spring/material/session07.qmd
@@ -1,28 +1,27 @@
 ---
-title: "🗓️ Session 7: Project management and data import"
-date: "2024-04-25"
+title: "🗓️ Session 7: Visualization"
+date: "2024-04-18"
 date-modified: last-modified
 ---
 
-This is one of the most underestimated topics. In this session you learn how
-to adequately set up your working environment on your computer. This means
-where you should save which files, which directory structure you should use,
-and how to point the computer to other files on your computer. In this context
-you also learn how to import data obtained elsewhere into R. While this sounds
-boring at first, taking seriously the insights from this session will save you
-tons of hours of frustration in the future!
+One area for which R is particulary well-known for is the area of 
+*visualization*. This is particularly because of the package 
+[ggplot2](https://ggplot2.tidyverse.org/). 
+This session introduces `ggplot2` and the general approach to generate 
+visualization in R. The good thing is that if you follow the approach described
+here, you can basically create every visualization type you can think of.
 
 
 ## 👨‍🏫 Lecture Slides 
 
 Either click on the slide area below or click 
-[here](/2024Spring/material/slides/T7-ProjectSetup.pdf) to download the slides.
+[here](/2024Spring/material/slides/T7-Visualization.pdf) to download the slides.
 
 
 ```{=html}
 <div class="embed-container">
   <iframe 
-  src="/2024Spring/material/slides/T7-ProjectSetup.pdf" 
+  src="/2024Spring/material/slides/T7-Visualization.pdf" 
   style="border: 0.5px" 
   width="80%"
   height="80%"
@@ -30,47 +29,37 @@ Either click on the slide area below or click
 </div>
 ```
 
-- [Data for the exercises](/2024Spring/material/fread_expls.zip)
+::: {.callout-tip collapse="true"}
+## The R script of this session
+<script src="https://gist.github.com/graebnerc/a3c11735652a0e4927ec71d4efadce09.js"></script>
+:::
 
 ## 🎥 Lecture videos 
 
-Currently, no videos are available for this session. Check out the tutorials
-on 
-[project setup](/2024Spring/tutorials/setting-up-an-r-project/index.qmd) 
-and 
-[data impot](/2024Spring/tutorials/importing-exporting-data/index.qmd) 
-instead.
+Currently, no videos are available for this session. Check out the 
+[tutorial](/2024Spring/tutorials/visualization/index.qmd) instead.
 
 ## 📚 Mandatory Reading
 
-- The tutorial [Setting up an R project](/2024Spring/tutorials/setting-up-an-r-project/index.qmd)
-- The tutorial [Importing and exporting data using data.table](/2024Spring/tutorials/importing-exporting-data/index.qmd) 
+- The tutorial [visualization](/2024Spring/tutorials/visualization/index.qmd)
 
 ## Further Reading
 
-While we do not cover this in this course, I highly recommend learning the 
-version control system [Git](https://git-scm.com/). 
-Personally, I can recommend the following:
-
-- [Very concise introduction](https://rogerdudler.github.io/git-guide/) to Git
-- Introduction to GitHub: [GitHub skills](https://skills.github.com/) and the [official docs](https://docs.github.com/en)
+- @hadleygraphics, who introduces the theory underlying `ggplot2`
+- [ggplot2 cheat sheet](https://github.com/rstudio/cheatsheets/blob/main/data-visualization.pdf)
+- Browse the website [from Data to Viz](https://www.data-to-viz.com/) and try to re-create some of the figures yourself
 
 ## ✍️ Coursework
 
-- Do the exercises `ProjectOrga` from the `DataScienceExercises` package
+- Do the exercises `Visualization1` from the `DataScienceExercises` package
 
 ::: {.callout-tip collapse="true"}
 ## Quick code for starting the exercises
 ```{r}
 #| eval: false
 learnr::run_tutorial(
-  name = "ProjectOrga", 
+  name = "Visualization1", 
   package = "DataScienceExercises", 
   shiny_args=list("launch.browser"=TRUE))
 ```
 :::
-- Download data about the CO2 emissions for some countries of your choice from
-the World Bank [website](https://data.worldbank.org/indicator/EN.ATM.CO2E.PC)
-for the years 2000 to 2020. Set up an R project, save the data, import it, and
-make a line graph.
-    - [ZIP file](/2024Spring/material/session07-solution.zip) with a possible solution^[You can ignore the `make_co2_data.R` for now and only look at `make_co2_plot.R`.]
